# Finite_Automata

./: CMakeLists.txt  README.md  build.sh  main.cpp
lib/: CMakeLists.txt  automaton.cpp  automaton.h
test/: main_test.cpp  main_test.h
